# swing_prediction

./: .gitignore  README.md  main.py  pyproject.toml  tp2_python.ipynb
notebooks/: 00_target_definition.ipynb  01_features.ipynb  02_eda.ipynb  03.1_regresion_logistica.ipynb  03.2_lgbm.ipynb  03.3_xgboost.ipynb  Benchmark_RegresionLogistica.ipynb  Modelo_XGBoost.ipynb  eda.ipynb  features.ipynb  light_gbm.ipynb  sklearn_lgbm.ipynb  target_definition.ipynb
