[project]
name = "swing-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas==3.0.3",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pyprojroot>=0.3.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "lightgbm>=4.6.0",
    "flaml[automl]>=2.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
